Redux / Thunk project uploaded

--- a/index.html
+++ b/index.html
@@ -215,7 +215,25 @@
                     </a>
                 </div>
             </div>
-
+            <div class="col-md-4 col-sm-6 gallery-frame">
+                <div class="card-container">
+                    <a target="_blank" href="https://github.com/wzlwit/JavaScript/tree/master/React/ReduxThunk_Udemy/blog">
+                        <div class="card">
+                            <div class="front">
+                                <img src="./img/ThunkBlog.png" alt="a photo for redux/thunk project">
+                            </div>
+                            <div class="cardback">
+                                <h4>Redux & Thunk</h4>
+                                <ul>
+                                    <li>A blog with user and coomments</li>
+                                    <li>Data fetched by API</li>
+                                    <li>Using Thunk to make async request</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
             <div class="col-md-4 col-sm-6 gallery-frame">
                 <div class="card-container">
                     <a target="_blank" href="https://wzlwit.github.io/TipCalculator/. ">
@@ -347,6 +365,7 @@
                 <li data-target="#gallery-slider" data-slide-to="7"></li>
                 <li data-target="#gallery-slider" data-slide-to="8"></li>
                 <li data-target="#gallery-slider" data-slide-to="9"></li>
+                <li data-target="#gallery-slider" data-slide-to="10"></li>
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -389,132 +408,152 @@
                 </div>
                 <div class="carousel-item">
                     <div class="card-container">
-                        <a target="_blank" href="https://wzlwit.github.io/TipCalculator/. ">
-                            <div class="card">
+                        <div class="card">
+                            <a target="_blank" href="https://github.com/wzlwit/JavaScript/tree/master/React/ReduxThunk_Udemy/blog">
                                 <div class="front">
-                                    <img src="./img/TipCalculator.png" alt="a photo for login validation">
+                                    <img src="./img/ThunkBlog.png" alt="a photo for thunk project">
                                 </div>
                                 <div class="cardback">
-                                    <h4>Tip Calculater</h4>
+                                    <h4>Redux & Thunk</h4>
                                     <ul>
-                                        <li>Inputs validation</li>
-                                        <li>Value selected or input</li>
-                                        <li>Show the result for each person</li>
-                                        <li>Message of toy</li>
+                                        <li>A blog with user and coomments</li>
+                                        <li>Data fetched by API</li>
+                                        <li>Using Thunk to make async request</li>
                                     </ul>
                                 </div>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <div class="card-container">
-                        <a target="_blank" href="https://wzlwit.github.io/StudentReport/">
-                            <div class="card">
-                                <div class="front">
-                                    <img src="./img/Report.png" alt="a photo for Student Report">
-                                </div>
-                                <div class="cardback">
-                                    <h4>Report</h4>
-                                    <ul>
-                                        <li>Array of objects for student information</li>
-                                        <li>Query by multiple values all at once</li>
-                                        <li>Add, edit, reset or remove comments</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <div class="card-container">
-                        <a target="_blank" href="https://wzlwit.github.io/board">
-                            <div class="card">
-                                <div class="front">
-                                    <img src="./img/ReactBoardComments.png" alt="a photo for Board & Comments">
-                                </div>
-                                <div class="cardback">
-                                    <h4>Board & Comments</h4>
-                                    <ul>
-                                        <li>Using React/Node.js</li>
-                                        <li>Board with a lot comments</li>
-                                        <li>Add, edit, reset or remove comments</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <div class="card-container">
-                        <a target="_blank" href="https://github.com/wzlwit/OnlineStore">
-                            <div class="card">
-                                <div class="front">
-                                    <img src="./img/Onlinestore.png" alt="a photo for login validation">
-                                </div>
-                                <div class="cardback">
-                                    <h4> Online Store</h4>
-                                    <ul>
-                                        <li>PHP and MySQL</li>
-                                        <li>3 account types</li>
-                                        <li>Rendering based on accounts</li>
-                                        <li>Searh and order products</li>
-                                        <li>Account and order manangement</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <div class="card-container">
-                        <a target="_blank" href="https://wzlwit.github.io/CssGame/">
-                            <div class="card">
-                                <div class="front">
-                                    <img src="./img/CssGame.png" alt="a photo for CSS Game">
-                                </div>
-                                <div class="cardback">
-                                    <h4>CSS Game</h4>
-                                    <ul>
-                                        <li>Pure CSS/Html Game</li>
-                                        <li>4 different item clickable</li>
-                                        <li>Animation for each item </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <div class="card-container">
-                        <a target="_blank" href="https://github.com/wzlwit/Calculator">
-                            <div class="card">
-                                <div class="front">
-                                    <img src="./img/Calculator.png" alt="a photo for calculator">
-                                </div>
-                                <div class="cardback">
-                                    <h4>Calculator</h4>
-                                    <ul>
-                                        <li>Two operands</li>
-                                        <li>Negative numbers</li>
-                                        <li>Operator changable</li>
-                                    </ul>
-                                </div>
-                            </div>
+                        </div>
                         </a>
                     </div>
                 </div>
             </div>
-            <a class="carousel-control-prev" href="#gallery-slider" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#gallery-slider" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
+            <div class="carousel-item">
+                <div class="card-container">
+                    <a target="_blank" href="https://wzlwit.github.io/TipCalculator/. ">
+                        <div class="card">
+                            <div class="front">
+                                <img src="./img/TipCalculator.png" alt="a photo for login validation">
+                            </div>
+                            <div class="cardback">
+                                <h4>Tip Calculater</h4>
+                                <ul>
+                                    <li>Inputs validation</li>
+                                    <li>Value selected or input</li>
+                                    <li>Show the result for each person</li>
+                                    <li>Message of toy</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="card-container">
+                    <a target="_blank" href="https://wzlwit.github.io/StudentReport/">
+                        <div class="card">
+                            <div class="front">
+                                <img src="./img/Report.png" alt="a photo for Student Report">
+                            </div>
+                            <div class="cardback">
+                                <h4>Report</h4>
+                                <ul>
+                                    <li>Array of objects for student information</li>
+                                    <li>Query by multiple values all at once</li>
+                                    <li>Add, edit, reset or remove comments</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="card-container">
+                    <a target="_blank" href="https://wzlwit.github.io/board">
+                        <div class="card">
+                            <div class="front">
+                                <img src="./img/ReactBoardComments.png" alt="a photo for Board & Comments">
+                            </div>
+                            <div class="cardback">
+                                <h4>Board & Comments</h4>
+                                <ul>
+                                    <li>Using React/Node.js</li>
+                                    <li>Board with a lot comments</li>
+                                    <li>Add, edit, reset or remove comments</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="card-container">
+                    <a target="_blank" href="https://github.com/wzlwit/OnlineStore">
+                        <div class="card">
+                            <div class="front">
+                                <img src="./img/Onlinestore.png" alt="a photo for login validation">
+                            </div>
+                            <div class="cardback">
+                                <h4> Online Store</h4>
+                                <ul>
+                                    <li>PHP and MySQL</li>
+                                    <li>3 account types</li>
+                                    <li>Rendering based on accounts</li>
+                                    <li>Searh and order products</li>
+                                    <li>Account and order manangement</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="card-container">
+                    <a target="_blank" href="https://wzlwit.github.io/CssGame/">
+                        <div class="card">
+                            <div class="front">
+                                <img src="./img/CssGame.png" alt="a photo for CSS Game">
+                            </div>
+                            <div class="cardback">
+                                <h4>CSS Game</h4>
+                                <ul>
+                                    <li>Pure CSS/Html Game</li>
+                                    <li>4 different item clickable</li>
+                                    <li>Animation for each item </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="card-container">
+                    <a target="_blank" href="https://github.com/wzlwit/Calculator">
+                        <div class="card">
+                            <div class="front">
+                                <img src="./img/Calculator.png" alt="a photo for calculator">
+                            </div>
+                            <div class="cardback">
+                                <h4>Calculator</h4>
+                                <ul>
+                                    <li>Two operands</li>
+                                    <li>Negative numbers</li>
+                                    <li>Operator changable</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
         </div>
-        <!-- gallery slide End -->
+        <a class="carousel-control-prev" href="#gallery-slider" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#gallery-slider" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+    <!-- gallery slide End -->
 
     </div>
     <!-- Gallery End-->
