--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             </div>
             <div class="col-md-4 col-sm-6 gallery-frame">
                 <div class="card-container">
-                    <a target="_blank" href="https://github.com/wzlwit/reduxdemo">
+                    <a target="_blank" href="https://wzlwit.github.io/reduxdemo">
                         <div class="card">
                             <div class="front">
                                 <img src="./img/reduxdemo.png" alt="a photo for redux project">
@@ -390,7 +390,7 @@
                 <div class="carousel-item">
                     <div class="card-container">
                         <div class="card">
-                            <a target="_blank" href="https://github.com/wzlwit/reduxdemo">
+                            <a target="_blank" href="https://wzlwit.github.io/reduxdemo">
                                 <div class="front">
                                     <img src="./img/reduxdemo.png" alt="a photo for redux project">
                                 </div>
