--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
                 <div class="grid">
                     <h4><i class="fa fa-magic"></i>Advacned Polyer Materials</h4>
                     <h5>Research Assistant</h5>
-                    <p>Research and develop</p>
+                    <p>Research and develope</p>
                     <p>Improve production process</p>
                     <p>Supplier to Sigma-Aldrich etc.</p>
                     <h6><b>Year</b> : 2017-2018</h6>
@@ -659,7 +659,7 @@
                 <div class="grid">
                     <h4><i class="fa fa-flask"></i>Scott Chemicals Qingdao</h4>
                     <h5>IT Assistant / Import&export Manager</h5>
-                    <p>Inner website develop</p>
+                    <p>Inner website develope</p>
                     <p>Local database maintanence</p>
                     <p>Data queries and report</p>
                     <h6><b>Year</b> : 2013-2015</h6>
@@ -702,7 +702,7 @@
                     <div class="grid">
                         <h4><i class="fa fa-magic"></i>Advacned Polyer Materials</h4>
                         <h5>Research Assistant</h5>
-                        <p>Research and develop</p>
+                        <p>Research and develope</p>
                         <p>Improve production process</p>
                         <p>Supplier to Sigma-Aldrich etc.</p>
                         <h6><b>Year</b> : 2017-2018</h6>
@@ -712,7 +712,7 @@
                     <div class="grid">
                         <h4><i class="fa fa-flask"></i>Scott Chemicals Qingdao</h4>
                         <h5>IT Assistant / Import&export Manager</h5>
-                        <p>Inner website develop</p>
+                        <p>Inner website develope</p>
                         <p>Local database maintanence</p>
                         <p>Data queries and report</p>
                         <h6><b>Year</b> : 2013-2015</h6>
