--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                             <div class="cardback">
                                 <h4>Redux & Thunk</h4>
                                 <ul>
-                                    <li>A blog with user and coomments</li>
+                                    <li>A blog with user and comments</li>
                                     <li>Data fetched by API</li>
                                     <li>Using Thunk to make async request</li>
                                 </ul>
@@ -416,7 +416,7 @@
                                 <div class="cardback">
                                     <h4>Redux & Thunk</h4>
                                     <ul>
-                                        <li>A blog with user and coomments</li>
+                                        <li>A blog with user and comments</li>
                                         <li>Data fetched by API</li>
                                         <li>Using Thunk to make async request</li>
                                     </ul>
