linkedin link updated

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <div class="back"><i class="fa fa-github"></i></div>
                     </a>
                 </li>
-                <li><a href="https://www.linkedin.com/in/z5809a9173" class="linkedin" target="_blank">
+                <li><a href="https://www.linkedin.com/in/wzl" class="linkedin" target="_blank">
                         <div class="front"><i class="fa fa-linkedin"></i></div>
                         <div class="back"><i class="fa fa-linkedin"></i></div>
                     </a>
@@ -954,7 +954,7 @@
                     <div class="back"><i class="fa fa-github"></i></div>
                 </a>
             </li>
-            <li><a href="https://www.linkedin.com/in/z5809a9173" class="linkedin" target="_blank">
+            <li><a href="https://www.linkedin.com/in/wzl" class="linkedin" target="_blank">
                     <div class="front"><i class="fa fa-linkedin"></i></div>
                     <div class="back"><i class="fa fa-linkedin"></i></div>
                 </a>
