--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <!-- banner -->
         <div class="banner">
             <h1>Zhaolong Wang</h1>
-            <h2>Progammer <br> Web Designer </h2>
+            <h2>Developer <br> Web Designer </h2>
 
             <!-- words animation -->
             <div class="drop-words">
