--- a/index.html
+++ b/index.html
@@ -294,6 +294,25 @@
             </div>
             <div class="col-md-4 col-sm-6 gallery-frame">
                 <div class="card-container">
+                    <a target="_blank" href="https://wzlwit.github.io/CssGame/">
+                        <div class="card">
+                            <div class="front">
+                                <img src="./img/CssGame.png" alt="a photo for CSS Game">
+                            </div>
+                            <div class="cardback">
+                                <h4>CSS Game</h4>
+                                <ul>
+                                    <li>Pure CSS/Html Game</li>
+                                    <li>4 different item clickable</li>
+                                    <li>Animation for each item </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6 gallery-frame">
+                <div class="card-container">
                     <a target="_blank" href="https://github.com/wzlwit/OnlineStore">
                         <div class="card">
                             <div class="front">
@@ -307,25 +326,6 @@
                                     <li>Render based on accounts</li>
                                     <li>Searh and order</li>
                                     <li>Accs/order manange</li>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6 gallery-frame">
-                <div class="card-container">
-                    <a target="_blank" href="https://wzlwit.github.io/CssGame/">
-                        <div class="card">
-                            <div class="front">
-                                <img src="./img/CssGame.png" alt="a photo for CSS Game">
-                            </div>
-                            <div class="cardback">
-                                <h4>CSS Game</h4>
-                                <ul>
-                                    <li>Pure CSS/Html Game</li>
-                                    <li>4 different item clickable</li>
-                                    <li>Animation for each item </li>
-                                </ul>
                             </div>
                         </div>
                     </a>
@@ -486,6 +486,25 @@
             </div>
             <div class="carousel-item">
                 <div class="card-container">
+                    <a target="_blank" href="https://wzlwit.github.io/CssGame/">
+                        <div class="card">
+                            <div class="front">
+                                <img src="./img/CssGame.png" alt="a photo for CSS Game">
+                            </div>
+                            <div class="cardback">
+                                <h4>CSS Game</h4>
+                                <ul>
+                                    <li>Pure CSS/Html Game</li>
+                                    <li>4 different item clickable</li>
+                                    <li>Animation for each item </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="card-container">
                     <a target="_blank" href="https://github.com/wzlwit/OnlineStore">
                         <div class="card">
                             <div class="front">
@@ -499,25 +518,6 @@
                                     <li>Rendering based on accounts</li>
                                     <li>Searh and order products</li>
                                     <li>Account and order manangement</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <div class="card-container">
-                    <a target="_blank" href="https://wzlwit.github.io/CssGame/">
-                        <div class="card">
-                            <div class="front">
-                                <img src="./img/CssGame.png" alt="a photo for CSS Game">
-                            </div>
-                            <div class="cardback">
-                                <h4>CSS Game</h4>
-                                <ul>
-                                    <li>Pure CSS/Html Game</li>
-                                    <li>4 different item clickable</li>
-                                    <li>Animation for each item </li>
                                 </ul>
                             </div>
                         </div>
@@ -879,7 +879,7 @@
     </div>
     <!-- achievement End -->
 
-
+    
     <!-- contact -->
     <div class="contact container" id="contact">
         <div class="row">
@@ -942,7 +942,7 @@
             <div class="clearfix"></div>
         </div>
     </div>
-    <!-- //contact End-->
+    <!-- contact End-->
 
     <!-- footer -->
     <div class="footer container">
@@ -964,7 +964,7 @@
         <p>Copyright &copy; Zhaolong Wang 2019</p>
         <br>
     </div>
-    <!-- //footer End-->
+    <!-- footer End-->
 
     <!-- JavaScript for bars -->
     <script src="./js/bars.js"></script>
@@ -981,7 +981,7 @@
             });
         });
     </script>
-    <!-- //scrolling script -->
+    <!-- scrolling script End -->
 
     <!-- js for rotating card -->
     <script>
@@ -1000,7 +1000,7 @@
             }
         }
     </script>
-    <!-- js for rotating card -->
+    <!-- js for rotating card End -->
 
 
 </body>
