headline news added

--- a/index.html
+++ b/index.html
@@ -313,6 +313,26 @@
             </div>
             <div class="col-md-4 col-sm-6 gallery-frame">
                 <div class="card-container">
+                    <a target="_blank" href="https://github.com/elfwings/headlinenews">
+                        <div class="card">
+                            <div class="front">
+                                <img src="./img/headline.png" alt="a photo for Headline News">
+                            </div>
+                            <div class="cardback">
+                                <h4>HeadLineNews</h4>
+                                <ul>
+                                    <li>PHP and MySQL</li>
+                                    <li>MeekroDB and Twig</li>
+                                    <li>MVC, Ajax, API</li>
+                                    <li>Searh and Subscript</li>
+                                    <li>Manager/User accounts</li>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6 gallery-frame">
+                <div class="card-container">
                     <a target="_blank" href="https://github.com/wzlwit/OnlineStore">
                         <div class="card">
                             <div class="front">
@@ -365,7 +385,6 @@
                 <li data-target="#gallery-slider" data-slide-to="7"></li>
                 <li data-target="#gallery-slider" data-slide-to="8"></li>
                 <li data-target="#gallery-slider" data-slide-to="9"></li>
-                <li data-target="#gallery-slider" data-slide-to="10"></li>
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -428,26 +447,6 @@
             </div>
             <div class="carousel-item">
                 <div class="card-container">
-                    <a target="_blank" href="https://wzlwit.github.io/TipCalculator/. ">
-                        <div class="card">
-                            <div class="front">
-                                <img src="./img/TipCalculator.png" alt="a photo for login validation">
-                            </div>
-                            <div class="cardback">
-                                <h4>Tip Calculater</h4>
-                                <ul>
-                                    <li>Inputs validation</li>
-                                    <li>Value selected or input</li>
-                                    <li>Show the result for each person</li>
-                                    <li>Message of toy</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <div class="card-container">
                     <a target="_blank" href="https://wzlwit.github.io/StudentReport/">
                         <div class="card">
                             <div class="front">
@@ -481,6 +480,47 @@
                                 </ul>
                             </div>
                         </div>
+                    </a>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="card-container">
+                    <a target="_blank" href="https://wzlwit.github.io/TipCalculator/. ">
+                        <div class="card">
+                            <div class="front">
+                                <img src="./img/TipCalculator.png" alt="a photo for login validation">
+                            </div>
+                            <div class="cardback">
+                                <h4>Tip Calculater</h4>
+                                <ul>
+                                    <li>Inputs validation</li>
+                                    <li>Value selected or input</li>
+                                    <li>Show the result for each person</li>
+                                    <li>Message of toy</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="card-container">
+                    <a target="_blank" href="https://wzlwit.github.io/elfwings/headlinenews">
+                        <div class="card">
+                            <div class="front">
+                                <img src="./img/headline.png" alt="a photo for HeadLine Nes">
+                            </div>
+                            <div class="cardback">
+                                <h4>HeadLineNews</h4>
+                                <ul>
+                                    <li>PHP and MySQL</li>
+                                    <li>MeekroDB and Twig</li>
+                                    <li>MVC, Ajax, API</li>
+                                    <li>Searh and Subscript</li>
+                                    <li>Manager/User accounts</li>
+                                </ul>
+                            </div>
+                        </div>  
                     </a>
                 </div>
             </div>
@@ -544,6 +584,7 @@
                 </div>
 
             </div>
+
             <a class="carousel-control-prev" href="#gallery-slider" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="sr-only">Previous</span>
@@ -879,7 +920,7 @@
     </div>
     <!-- achievement End -->
 
-    
+
     <!-- contact -->
     <div class="contact container" id="contact">
         <div class="row">
