--- a/index.html
+++ b/index.html
@@ -353,6 +353,25 @@
             </div>
             <div class="col-md-4 col-sm-6 gallery-frame">
                 <div class="card-container">
+                    <a target="_blank" href="https://github.com/wzlwit/java">
+                        <div class="card">
+                            <div class="front">
+                                <img src="./img/java.jpg" alt="a photo for java codes">
+                            </div>
+                            <div class="cardback">
+                                <h4>Java Codes</h4>
+                                <ul>
+                                    <li>Algorithm Snippets</li>
+                                    <li>Exercises on books</li>
+                                    <li>Personal Projects</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6 gallery-frame">
+                <div class="card-container">
                     <a target="_blank" href="https://github.com/wzlwit/Calculator">
                         <div class="card">
                             <div class="front">
@@ -385,6 +404,7 @@
                 <li data-target="#gallery-slider" data-slide-to="7"></li>
                 <li data-target="#gallery-slider" data-slide-to="8"></li>
                 <li data-target="#gallery-slider" data-slide-to="9"></li>
+                <li data-target="#gallery-slider" data-slide-to="10"></li>
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -444,147 +464,166 @@
                         </a>
                     </div>
                 </div>
-            </div>
-            <div class="carousel-item">
-                <div class="card-container">
-                    <a target="_blank" href="https://wzlwit.github.io/StudentReport/">
-                        <div class="card">
-                            <div class="front">
-                                <img src="./img/Report.png" alt="a photo for Student Report">
+                <div class="carousel-item">
+                    <div class="card-container">
+                        <a target="_blank" href="https://wzlwit.github.io/StudentReport/">
+                            <div class="card">
+                                <div class="front">
+                                    <img src="./img/Report.png" alt="a photo for Student Report">
+                                </div>
+                                <div class="cardback">
+                                    <h4>Report</h4>
+                                    <ul>
+                                        <li>Array of objects for student information</li>
+                                        <li>Query by multiple values all at once</li>
+                                        <li>Add, edit, reset or remove comments</li>
+                                    </ul>
+                                </div>
                             </div>
-                            <div class="cardback">
-                                <h4>Report</h4>
-                                <ul>
-                                    <li>Array of objects for student information</li>
-                                    <li>Query by multiple values all at once</li>
-                                    <li>Add, edit, reset or remove comments</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </a>
+                        </a>
+                    </div>
                 </div>
-            </div>
-            <div class="carousel-item">
-                <div class="card-container">
-                    <a target="_blank" href="https://wzlwit.github.io/board">
-                        <div class="card">
-                            <div class="front">
-                                <img src="./img/ReactBoardComments.png" alt="a photo for Board & Comments">
+                <div class="carousel-item">
+                    <div class="card-container">
+                        <a target="_blank" href="https://wzlwit.github.io/board">
+                            <div class="card">
+                                <div class="front">
+                                    <img src="./img/ReactBoardComments.png" alt="a photo for Board & Comments">
+                                </div>
+                                <div class="cardback">
+                                    <h4>Board & Comments</h4>
+                                    <ul>
+                                        <li>Using React/Node.js</li>
+                                        <li>Board with a lot comments</li>
+                                        <li>Add, edit, reset or remove comments</li>
+                                    </ul>
+                                </div>
                             </div>
-                            <div class="cardback">
-                                <h4>Board & Comments</h4>
-                                <ul>
-                                    <li>Using React/Node.js</li>
-                                    <li>Board with a lot comments</li>
-                                    <li>Add, edit, reset or remove comments</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </a>
+                        </a>
+                    </div>
                 </div>
-            </div>
-            <div class="carousel-item">
-                <div class="card-container">
-                    <a target="_blank" href="https://wzlwit.github.io/TipCalculator/. ">
-                        <div class="card">
-                            <div class="front">
-                                <img src="./img/TipCalculator.png" alt="a photo for login validation">
+                <div class="carousel-item">
+                    <div class="card-container">
+                        <a target="_blank" href="https://wzlwit.github.io/TipCalculator/. ">
+                            <div class="card">
+                                <div class="front">
+                                    <img src="./img/TipCalculator.png" alt="a photo for login validation">
+                                </div>
+                                <div class="cardback">
+                                    <h4>Tip Calculater</h4>
+                                    <ul>
+                                        <li>Inputs validation</li>
+                                        <li>Value selected or input</li>
+                                        <li>Show the result for each person</li>
+                                        <li>Message of toy</li>
+                                    </ul>
+                                </div>
                             </div>
-                            <div class="cardback">
-                                <h4>Tip Calculater</h4>
-                                <ul>
-                                    <li>Inputs validation</li>
-                                    <li>Value selected or input</li>
-                                    <li>Show the result for each person</li>
-                                    <li>Message of toy</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </a>
+                        </a>
+                    </div>
                 </div>
-            </div>
-            <div class="carousel-item">
-                <div class="card-container">
-                    <a target="_blank" href="https://wzlwit.github.io/elfwings/headlinenews">
-                        <div class="card">
-                            <div class="front">
-                                <img src="./img/headline.png" alt="a photo for HeadLine Nes">
+                <div class="carousel-item">
+                    <div class="card-container">
+                        <a target="_blank" href="https://wzlwit.github.io/CssGame/">
+                            <div class="card">
+                                <div class="front">
+                                    <img src="./img/CssGame.png" alt="a photo for CSS Game">
+                                </div>
+                                <div class="cardback">
+                                    <h4>CSS Game</h4>
+                                    <ul>
+                                        <li>Pure CSS/Html Game</li>
+                                        <li>4 different item clickable</li>
+                                        <li>Animation for each item </li>
+                                    </ul>
+                                </div>
                             </div>
-                            <div class="cardback">
-                                <h4>HeadLineNews</h4>
-                                <ul>
-                                    <li>PHP and MySQL</li>
-                                    <li>MeekroDB and Twig</li>
-                                    <li>MVC, Ajax, API</li>
-                                    <li>Searh and Subscript</li>
-                                    <li>Manager/User accounts</li>
-                                </ul>
-                            </div>
-                        </div>  
-                    </a>
+                        </a>
+                    </div>
                 </div>
-            </div>
-            <div class="carousel-item">
-                <div class="card-container">
-                    <a target="_blank" href="https://wzlwit.github.io/CssGame/">
-                        <div class="card">
-                            <div class="front">
-                                <img src="./img/CssGame.png" alt="a photo for CSS Game">
-                            </div>
-                            <div class="cardback">
-                                <h4>CSS Game</h4>
-                                <ul>
-                                    <li>Pure CSS/Html Game</li>
-                                    <li>4 different item clickable</li>
-                                    <li>Animation for each item </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </a>
+                <div class="carousel-item">
+                    <div class="card-container">
+                        <a target="_blank" href="https://wzlwit.github.io/elfwings/headlinenews">
+                            <div class="card">
+                                <div class="front">
+                                    <img src="./img/headline.png" alt="a photo for HeadLine Nes">
+                                </div>
+                                <div class="cardback">
+                                    <h4>HeadLineNews</h4>
+                                    <ul>
+                                        <li>PHP and MySQL</li>
+                                        <li>MeekroDB and Twig</li>
+                                        <li>MVC, Ajax, API</li>
+                                        <li>Searh and Subscript</li>
+                                        <li>Manager/User accounts</li>
+                                    </ul>
+                                </div>
+                            </div>  
+                        </a>
+                    </div>
                 </div>
-            </div>
-            <div class="carousel-item">
-                <div class="card-container">
-                    <a target="_blank" href="https://github.com/wzlwit/OnlineStore">
-                        <div class="card">
-                            <div class="front">
-                                <img src="./img/Onlinestore.png" alt="a photo for login validation">
+                <div class="carousel-item">
+                    <div class="card-container">
+                        <a target="_blank" href="https://github.com/wzlwit/OnlineStore">
+                            <div class="card">
+                                <div class="front">
+                                    <img src="./img/Onlinestore.png" alt="a photo for login validation">
+                                </div>
+                                <div class="cardback">
+                                    <h4> Online Store</h4>
+                                    <ul>
+                                        <li>PHP and MySQL</li>
+                                        <li>3 account types</li>
+                                        <li>Rendering based on accounts</li>
+                                        <li>Searh and order products</li>
+                                        <li>Account and order manangement</li>
+                                    </ul>
+                                </div>
                             </div>
-                            <div class="cardback">
-                                <h4> Online Store</h4>
-                                <ul>
-                                    <li>PHP and MySQL</li>
-                                    <li>3 account types</li>
-                                    <li>Rendering based on accounts</li>
-                                    <li>Searh and order products</li>
-                                    <li>Account and order manangement</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </a>
+                        </a>
+                    </div>
                 </div>
-            </div>
-            <div class="carousel-item">
-                <div class="card-container">
-                    <a target="_blank" href="https://github.com/wzlwit/Calculator">
-                        <div class="card">
-                            <div class="front">
-                                <img src="./img/Calculator.png" alt="a photo for calculator">
+                <div class="carousel-item">
+                    <div class="card-container">
+                        <a target="_blank" href="https://github.com/wzlwit/java">
+                            <div class="card">
+                                <div class="front">
+                                    <img src="./img/java.jpg" alt="a photo for java codes">
+                                </div>
+                                <div class="cardback">
+                                    <h4>Java Codes</h4>
+                                    <ul>
+                                        <li>Algorithm Snippets</li>
+                                        <li>Exercises on books</li>
+                                        <li>Personal Projects</li>
+                                    </ul>
+                                </div>
                             </div>
-                            <div class="cardback">
-                                <h4>Calculator</h4>
-                                <ul>
-                                    <li>Two operands</li>
-                                    <li>Negative numbers</li>
-                                    <li>Operator changable</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </a>
-                </div>
+                        </a>
+                    </div>
 
-            </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="card-container">
+                        <a target="_blank" href="https://github.com/wzlwit/Calculator">
+                            <div class="card">
+                                <div class="front">
+                                    <img src="./img/Calculator.png" alt="a photo for calculator">
+                                </div>
+                                <div class="cardback">
+                                    <h4>Calculator</h4>
+                                    <ul>
+                                        <li>Two operands</li>
+                                        <li>Negative numbers</li>
+                                        <li>Operator changable</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
 
+                </div>
+            </div>
             <a class="carousel-control-prev" href="#gallery-slider" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="sr-only">Previous</span>
