--- a/index.html
+++ b/index.html
@@ -175,7 +175,48 @@
     <div class="gallery container" id="gallery">
         <h3 class="heading">Portfolio</h3>
         <p>* flip and click *</p>
-        <br>
+        <h4>Java</h4>
+        <div class="row">
+            <div class="col-md-4 col-sm-6 gallery-frame">
+                <div class="card-container">
+                    <a target="_blank" href="https://github.com/wzlwit/java">
+                        <div class="card">
+                            <div class="front">
+                                <img src="./img/java.jpg" alt="a photo for java codes">
+                            </div>
+                            <div class="cardback">
+                                <h4>Java Codes</h4>
+                                <ul>
+                                    <li>Algorithm Snippets</li>
+                                    <li>Exercises on books</li>
+                                    <li>Personal Projects</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6 gallery-frame">
+                <div class="card-container">
+                    <a target="_blank" href="https://github.com/wzlwit/Calculator">
+                        <div class="card">
+                            <div class="front">
+                                <img src="./img/Calculator.png" alt="a photo for calculator">
+                            </div>
+                            <div class="cardback">
+                                <h4>Calculator</h4>
+                                <ul>
+                                    <li>Two operands</li>
+                                    <li>Negative numbers</li>
+                                    <li>Operator changable</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <h4>JS HTML CSS</h4>
         <div class="row">
             <div class="col-md-4 col-sm-6 gallery-frame">
                 <div class="card-container">
@@ -278,6 +319,7 @@
                     <a target="_blank" href="https://wzlwit.github.io/board">
                         <div class="card">
                             <div class="front">
+
                                 <img src="./img/ReactBoardComments.png" alt="a photo for Board & Comments">
                             </div>
                             <div class="cardback">
@@ -311,6 +353,9 @@
                     </a>
                 </div>
             </div>
+        </div>
+        <h4>PHP DataBase</h4>
+        <div class="row">
             <div class="col-md-4 col-sm-6 gallery-frame">
                 <div class="card-container">
                     <a target="_blank" href="https://github.com/elfwings/headlinenews">
@@ -351,45 +396,6 @@
                     </a>
                 </div>
             </div>
-            <div class="col-md-4 col-sm-6 gallery-frame">
-                <div class="card-container">
-                    <a target="_blank" href="https://github.com/wzlwit/java">
-                        <div class="card">
-                            <div class="front">
-                                <img src="./img/java.jpg" alt="a photo for java codes">
-                            </div>
-                            <div class="cardback">
-                                <h4>Java Codes</h4>
-                                <ul>
-                                    <li>Algorithm Snippets</li>
-                                    <li>Exercises on books</li>
-                                    <li>Personal Projects</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6 gallery-frame">
-                <div class="card-container">
-                    <a target="_blank" href="https://github.com/wzlwit/Calculator">
-                        <div class="card">
-                            <div class="front">
-                                <img src="./img/Calculator.png" alt="a photo for calculator">
-                            </div>
-                            <div class="cardback">
-                                <h4>Calculator</h4>
-                                <ul>
-                                    <li>Two operands</li>
-                                    <li>Negative numbers</li>
-                                    <li>Operator changable</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-
         </div>
         <!-- gallery slide -->
         <div id="gallery-slider" class="carousel slide" data-ride="carousel">
@@ -558,7 +564,7 @@
                                         <li>Manager/User accounts</li>
                                     </ul>
                                 </div>
-                            </div>  
+                            </div>
                         </a>
                     </div>
                 </div>
@@ -634,7 +640,6 @@
             </a>
         </div>
         <!-- gallery slide End -->
-
     </div>
     <!-- Gallery End-->
 
